loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: illegal start of simple expression
while(!isFacingWall()):
                      ^